# sdl2-cpp

./: .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  include.h  library.cpp
image-cpp/: image-cpp.h  image.hpp
sdl2-cpp/: color.hpp  event.hpp  except.hpp  keyboard.hpp  point.hpp  rect.hpp  renderer.hpp  sdl2-cpp.h  surface.hpp  texture.hpp  utility.hpp  window.hpp
ttf-cpp/: font.hpp  ttf-cpp.h
